--- a/index.html
+++ b/index.html
@@ -1137,7 +1137,7 @@
         <div class="testimonial-grid">
             <div class="testimonial-card" data-aos="fade-up" data-aos-delay="100">
                 <div class="testimonial-content">
-                    <p>The quality of the zippers and buttons we received exceeded our expectations. Our customers have noticed the difference in our garments since we switched to Elite Accessories.</p>
+                    <p>The quality of the zippers and buttons we received exceeded our expectations. Our customers have noticed the difference in our garments since we switched to ShineTex Accessories.</p>
                 </div>
                 <div class="testimonial-author">
                     <div class="author-avatar">
@@ -1167,7 +1167,7 @@
             
             <div class="testimonial-card" data-aos="fade-up" data-aos-delay="300">
                 <div class="testimonial-content">
-                    <p>We've been working with Elite Accessories for over 5 years now. Their consistent quality and on-time delivery have made them our preferred supplier for all our accessory needs.</p>
+                    <p>We've been working with ShineTex Accessories for over 5 years now. Their consistent quality and on-time delivery have made them our preferred supplier for all our accessory needs.</p>
                 </div>
                 <div class="testimonial-author">
                     <div class="author-avatar">
@@ -1375,7 +1375,7 @@
     <div class="container">
         <div class="footer-content">
             <div class="footer-column">
-                <h3>Elite Accessories</h3>
+                <h3>ShineTex Accessories</h3> 
                 <p>All types of Imported garment accessories supplier for the fashion industry. Quality, innovation, and reliability since 2024.</p>
                 <div class="social-icons">
                     <a href="#"><i class="fab fa-facebook-f"></i></a>
